samples/alsa-sphinxdoc/_sources/group_Error.rst.txt
.. index:: pair: group; Error handling
.. _doxid-group___error:
.. _cid-error:

Error handling
==============

.. toctree::
	:hidden:



Overview
~~~~~~~~

Error handling macros and functions. :ref:`More...<details-doxid-group___error>`

.. ref-code-block:: cpp
	:class: overview-code-block

	// typedefs

	typedef void (* :ref:`snd_lib_error_handler_t<doxid-group___error_1gae71d39953bf482ba487d811a69a9175c>`)(
	    const char *file,
	    int line,
	    const char *function,
	    int err,
	    const char *fmt,
	    ...
	    )

	// global variables

	:ref:`snd_lib_error_handler_t<doxid-group___error_1gae71d39953bf482ba487d811a69a9175c>` :ref:`snd_lib_error<doxid-group___error_1gad6a605072dcc056de5f86d67687d90a6>`

	// global functions

	const char*
	:ref:`snd_strerror<doxid-group___error_1ga182bbadf2349e11602bc531e8cf22f7e>` (int errnum)

	int
	:ref:`snd_lib_error_set_handler<doxid-group___error_1ga6ba1f0aa6c6bc5d335ab297d6019cb03>` (:ref:`snd_lib_error_handler_t<doxid-group___error_1gae71d39953bf482ba487d811a69a9175c>` handler)

	// macros

	#define :ref:`SNDERR<doxid-group___error_1ga281420eb1344fe9f01d67d20c92457f0>`(args...)
	#define :ref:`SND_ERROR_ALISP_NIL<doxid-group___error_1ga07b06f3c54db1c1d382e02b59b4fb652>`
	#define :ref:`SND_ERROR_BEGIN<doxid-group___error_1ga4e74ed65daac8e1737b7ec7b38d11ab4>`
	#define :ref:`SND_ERROR_INCOMPATIBLE_VERSION<doxid-group___error_1gae24d4fe06c0a7478ebdaeeeca55d34c5>`
	#define :ref:`SYSERR<doxid-group___error_1ga6a6d50d5d5c51d971732e9925a226435>`(args...)

.. _details-doxid-group___error:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

Error handling macros and functions.

Typedefs
--------

.. _doxid-group___error_1gae71d39953bf482ba487d811a69a9175c:
.. _cid-snd_lib_error_handler_t:
.. ref-code-block:: cpp
	:class: title-code-block

	typedef void (* snd_lib_error_handler_t)(
	    const char *file,
	    int line,
	    const char *function,
	    int err,
	    const char *fmt,
	    ...
	    )

Error handler callback.

A function of this type is called by the ALSA library when an error occurs. This function usually shows the message on the screen, and/or logs it.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - file

        - Source file name.

    *
        - line

        - Line number.

    *
        - function

        - Function name.

    *
        - err

        - Value of ``errno`` , or 0 if not relevant.

    *
        - fmt

        - ``printf(3)`` format.

    *
        - ...

        - ``printf(3)`` arguments.

Global Variables
----------------

.. _doxid-group___error_1gad6a605072dcc056de5f86d67687d90a6:
.. _cid-snd_lib_error:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`snd_lib_error_handler_t<doxid-group___error_1gae71d39953bf482ba487d811a69a9175c>` snd_lib_error

Pointer to the error handler function. For internal use only.

Global Functions
----------------

.. _doxid-group___error_1ga182bbadf2349e11602bc531e8cf22f7e:
.. _cid-snd_strerror:
.. ref-code-block:: cpp
	:class: title-code-block

	const char*
	snd_strerror (int errnum)

Returns the message for an error code.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - errnum

        - The error code number, which must be a system error code or an ALSA error code.



.. rubric:: Returns:

The ASCII description of the given numeric error code.

.. _doxid-group___error_1ga6ba1f0aa6c6bc5d335ab297d6019cb03:
.. _cid-snd_lib_error_set_handler:
.. ref-code-block:: cpp
	:class: title-code-block

	int
	snd_lib_error_set_handler (:ref:`snd_lib_error_handler_t<doxid-group___error_1gae71d39953bf482ba487d811a69a9175c>` handler)

Sets the error handler.

This function sets a new error handler, or (if ``handler`` is ``NULL`` ) the default one which prints the error messages to ``stderr`` .



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - handler

        - The pointer to the new error handler function.

Macros
------

.. _doxid-group___error_1ga281420eb1344fe9f01d67d20c92457f0:
.. _cid-snderr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define SNDERR(args...)

Shows a sound error message.

.. _doxid-group___error_1ga07b06f3c54db1c1d382e02b59b4fb652:
.. _cid-snd_error_alisp_nil:
.. ref-code-block:: cpp
	:class: title-code-block

	#define SND_ERROR_ALISP_NIL

Lisp encountered an error during acall.

.. _doxid-group___error_1ga4e74ed65daac8e1737b7ec7b38d11ab4:
.. _cid-snd_error_begin:
.. ref-code-block:: cpp
	:class: title-code-block

	#define SND_ERROR_BEGIN

Lower boundary of sound error codes.

.. _doxid-group___error_1gae24d4fe06c0a7478ebdaeeeca55d34c5:
.. _cid-snd_error_incompatible_version:
.. ref-code-block:: cpp
	:class: title-code-block

	#define SND_ERROR_INCOMPATIBLE_VERSION

Kernel/library protocols are not compatible.

.. _doxid-group___error_1ga6a6d50d5d5c51d971732e9925a226435:
.. _cid-syserr:
.. ref-code-block:: cpp
	:class: title-code-block

	#define SYSERR(args...)

Shows a system error message (related to ``errno`` ).

